feat(config): externalize CORS and AI service configuration
- Add @Value annotation to SecurityConfig to load allowed origins from properties
- Parse comma-separated CORS origins from environment variable for flexible deployment
- Add logging to AIClientService with SLF4J for better debugging and monitoring
- Implement HTTP status code validation in AI service response handling
- Add detailed error logging for AI service failures and exceptions
- Update application-prod.properties with default AI service URL and enhanced logging config
- Remove hardcoded PostgreSQL driver configuration from application.properties
- Simplify profile configuration to use environment variables instead of active profile
- Improve error messages with status codes and response body details for troubleshooting